[gd_scene load_steps=10 format=3 uid="uid://c5yd8hfye55fg"]

[ext_resource type="Texture2D" uid="uid://cl0w77ofey02s" path="res://Img/suits.svg" id="1_e1l8b"]
[ext_resource type="Script" uid="uid://b86ur8rpc0itb" path="res://Scripts/Utils/SendCards.gd" id="1_ss0nu"]
[ext_resource type="Texture2D" uid="uid://clj7jmgbmfde7" path="res://Img/poker-hand.svg" id="2_ss0nu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujk8k"]
bg_color = Color(0.164706, 0.431373, 1, 0.878431)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.254902)
shadow_size = 3
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbfcg"]
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.784314, 0.184314, 0.25098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.32549, 0, 0, 0.301961)
shadow_size = 4
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_au3ln"]
bg_color = Color(0.14902, 0.129412, 0.262745, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.14902, 0.129412, 0.262745, 0.301961)
shadow_size = 4
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ivsw"]
content_margin_left = 2.0
content_margin_top = 1.0
content_margin_right = 2.0
content_margin_bottom = 1.0
bg_color = Color(0.818558, 0.809609, 0.984763, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.819608, 0.807843, 0.984314, 0.294118)
shadow_size = 4
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss0nu"]
bg_color = Color(0.166674, 0.235135, 0.833647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.168627, 0.235294, 0.835294, 0.27451)
shadow_size = 4
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnx57"]
bg_color = Color(0.295133, 0.0958669, 0.170741, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.294118, 0.0941176, 0.172549, 0.27451)
shadow_size = 4
shadow_offset = Vector2(1, 1)

[node name="PeerSendCards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ss0nu")

[node name="InfoBox" type="Panel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 266.0
offset_bottom = 166.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ujk8k")

[node name="Prompt" type="Label" parent="InfoBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.0
offset_top = 8.0
offset_right = 107.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Choose: "

[node name="PlayerName" type="Label" parent="InfoBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 32.0
offset_right = 232.0
offset_bottom = 55.0
text = "0"
horizontal_alignment = 1

[node name="Deck" type="Button" parent="InfoBox"]
layout_mode = 2
offset_left = 136.0
offset_top = 64.0
offset_right = 231.0
offset_bottom = 134.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_lbfcg")
icon = ExtResource("1_e1l8b")
icon_alignment = 1
expand_icon = true

[node name="Card" type="Button" parent="InfoBox"]
layout_mode = 2
offset_left = 16.0
offset_top = 64.0
offset_right = 111.0
offset_bottom = 134.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_au3ln")
icon = ExtResource("2_ss0nu")
icon_alignment = 1
expand_icon = true

[node name="CardList" type="ItemList" parent="InfoBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 96.0
offset_right = 232.0
offset_bottom = 136.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_1ivsw")

[node name="Send" type="Button" parent="InfoBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 56.0
offset_right = 112.0
offset_bottom = 88.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ss0nu")
text = "Send"

[node name="Cancel" type="Button" parent="InfoBox"]
layout_mode = 0
offset_left = 136.0
offset_top = 56.0
offset_right = 232.0
offset_bottom = 88.0
theme_override_styles/normal = SubResource("StyleBoxFlat_qnx57")
text = "Back"

[connection signal="pressed" from="InfoBox/Deck" to="." method="_on_send_deck_button_pressed"]
[connection signal="pressed" from="InfoBox/Card" to="." method="_on_send_specific_cards_button_pressed"]
[connection signal="item_selected" from="InfoBox/CardList" to="." method="_on_card_selector_item_selected"]
